book/tests/snapshots/snapshot__run_display_reference_prql@language-features__s-strings-5.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/s-strings-5.prql
---
from employees
derive [
  gross_salary = salary + benefits,
  daily_rate = s"{gross_salary} / 365",
]



