book/tests/snapshots/snapshot__run_display_reference_prql@language-features__strings-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/strings-0.prql
---
from my_table
select x = "hello world"



