book/tests/snapshots/snapshot__run_display_reference_prql@language-features__strings-3.prql.snap
---
source: book/tests/snapshot.rs
expression: Statements(parse(&prql).unwrap())
input_file: book/tests/prql/language-features/strings-3.prql
---
from my_table
select x = 'I said "hello world"!'



