book/tests/snapshots/snapshot__run_display_reference_prql@language-features__switch-1.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/switch-1.prql
---
from employees
derive distance = [
  city == "Calgary" => 0
  city == "Edmonton" => 300
  true => "Unknown"
]



