book/tests/snapshots/snapshot__run_display_reference_prql@language-features__syntax-0.prql.snap
---
source: book/tests/snapshot.rs
expression: prql_to_pl(&prql).and_then(pl_to_prql).unwrap()
input_file: book/tests/prql/language-features/syntax-0.prql
---
from employees
filter department == "Product"
select [
  first_name,
  last_name,
]



